@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Main {
{static} main(args:String[])
}

class PointOfSale {
- idLastSale : int
- catalogFileName : String
+ makeNewSale() : int
+ addLineItemToSale(idSale : int, \n\tprodName : String, qty : int)
+ printReceiptOfSale(saleId : int)
+ payOneSaleCash(saleId : int, amountHanded : double)
+ payOneSaleCash(saleId : int, ccnumber : String)
+ printPayment(saleId : int)
- searchSaleById(int id) : Sale
}

class ProductCatalog {
+ ProductCatalog(fileName : String)
+ searchByName(name : String) : ProductSpecification
- addProductSpecification(name : String, price : double)
}

note left of ProductCatalog::ProductCatalog {
text file with
Coca-cola 1.20
Nestea    1.50
Moritz    1.90
...
}

class ProductSpecification {
- price : double
- name : String
}

class Sale {
- id : int
- dateTime : LocalDateTime
+ Sale(id : int)
+ addLineItem(prodSpec : ProductSpecification, qty : int)
+ payCash(amountHanded : double)
+ payCreditCard(amountToPay : double, ccnumber : String)
+ printPayment()
+ total() : double
+ printReceipt()

}

class SaleLineItem {
- quantity : int
+ incrementQuantity()
+ subtotal() : double
+ print()
}

abstract class Payment {
  # amountToPay : double
  + Payment(amountToPay : double)
  + {abstract} pay()
  + {abstract} print()
}

class CashBox {
-coin: Map<Double, Integer>
+add(c: CashBox)
+sub(c: CashBox)
+greaterEqual(amountToPay : double): boolean
+total(): double
+getKeys(): Set<Double>
+put(key: double, quantity: int)
+toString(): String
}

abstract class PaymentInCash extends Payment {
  + PaymentInCash(amountToPay : double)
  + print()
  - change(totalSale : double) : String
}

Sale --> "0,1" Payment : payment

class PaymentInCashGreedy extends PaymentInCash{
#change() : String
}

class PaymentInCashRandom extends PaymentInCash {
#change(): String
}

class PaymentCreditCard extends Payment {
  - ccnumber : String
  - authorized : boolean  
  + PaymentCreditCard(ccnumber : int, \n\tamountToPay : double)
  + print()
  - authorize() : boolean
}

PointOfSale o--> "*" Sale : sales
Sale *--> "*" SaleLineItem : saleLineItems
SaleLineItem --> "1" ProductSpecification : productSpecification
PointOfSale --> "1" ProductCatalog : productCatalog
ProductCatalog o--> " * " ProductSpecification : productSpecifications
PaymentInCash --> "1" CashBox : amountHanded
@enduml